--- a/latex/pol_complex_refs.bib
+++ b/latex/pol_complex_refs.bib
@@ -1,9 +1,12 @@
-@article{mahony1960taro,
+@incollection{mahony1960taro,
   title={Taro cultivation in Truk},
   author={Mahony, Frank J},
-  journal={Taro cultivation practices and beliefs,. the Eastern Carolines and the Marshall Islands},
+  booktitle={Taro cultivation practices and beliefs: the Eastern Carolines and the Marshall Islands},
   number={6},
+editor={John E. deYoung},
+series={Anthropological Working Papers},
   pages={69--98},
+address={Guam, Micronesian Islands},
   year={1960},
   publisher={Office of the Staff Anthropologist}
 }
@@ -89,6 +92,7 @@
     title = {The Material Culture of Kapingamarangi},
     journal = {Bernice Pauahi Bishop Museum Bulletin},
     volume = {200},
+   publisher={Bernice Pauahi Bishop Museum Press},
     year = {1950},
     key = {Buck (1950)},
     lgcode = {Kapingamarangi [kapi1249]}
@@ -97,6 +101,7 @@
 @book{buck1952,
     author = {Buck, P. H.},
     title = {The Coming of the Maori},
+    publisher={Maori Purposes Fund Board; [distributed by] Whitcombe and Tombs},
     address = {Wellington},
     year = {1952},
     lgcode = {Māori [maor1246]}
@@ -135,10 +140,10 @@
     lgcode = {Uveans [wall1257]}
 }
 
-@incollection{burrowsandspiro1953,
+@book{burrowsandspiro1953,
     author = {Burrows, E. G. AND  M. E. Spiro.},
     title = {An Atoll Culture: Ethnography of Ifaluk in the Central Carolines},
-    booktitle={Human Relations Area Files},
+    publisher={Human Relations Area Files},
     address = {New Haven},
     year = {1953},
     key = {Burrows and Spiro (1953)},
@@ -146,9 +151,10 @@
 }
 
 @book{deacon1934,
-    author = {Deacon, A. B.},
-    title = {Malekula},
+    author = {Deacon, A. B. AND Wedgwood, Camilla H. Hildegarde},
+    title = {Malekula: a vanishing people in the New Hebrides},
     address = {London},
+    publisher={George Routledge and Sons, Ltd.},
     year = {1934},
     key = {Deacon (1934)},
     lgcode = {Seniang [sout2857]}
@@ -167,28 +173,31 @@
 }
 
 @incollection{erdland1914,
-    author = {Erdland, P. A.},
-    title = {The Marshall Islanders: Life and Customs, Thought and Religion of a South Seas People },
+    author = {Erdland, August AND Neuse, Richard.},
+    title = {The Marshall Islanders: life and customs, thought and religion of a South Seas people},
     address = {New Haven, CT},
     booktitle={Human Relations Area Files},
     year = {1961[1914]},
+publisher={Sine nomine},
     key = {Erdland (1914)},
     notes={Translation from German. Original title= Die Marshall-Insulaner},
     lgcode = {Marshallese - Jaluit Atoll [rali1241], Marshallese - Jaluit atoll [rali1241]}
 }
 
-@book{humphreys1926,
+@misc{humphreys1926,
     author = {Humphreys, C. B.},
     title = {The Southern New Hebrides: An Ethnological Record},
     address = {Cambridge},
     year = {1926},
+    note={CUP Archive},
     key = {Humphreys (1926)},
     lgcode = {Eromangans [siee1239], Tannese [sout2869]}
 }
 
 @book{huntetal1949,
-    author = {Hunt, E. E. Jr. and D. M. Schneider and N. R. Kidder and W. D. Stevens},
-    title = {The Micronesians of Yap and Their Depopulation},
+    author = {Hunt, Edward Eyre and Schneider, David Murray and Kidder, Nathaniel R and Stevens, William D},
+publisher={Peabody Museum, Harvard University},
+    title = {The Micronesians of Yap and Their Depopulation: Report of the Peabody Museum Expedition to Yap Island, Micronesia, 1947-1948},
     address = {Washington},
     year = {1949},
     key = {Hunt et al. (1949)},
@@ -207,6 +216,7 @@
 
 @book{keesing1934,
     author = {Keesing, F. M.},
+    publisher={G. Allen \& Unwin ltd.},
     title = {Modern Samoa:Its Government and Changing Life},
     address = {London},
     year = {1934},
@@ -220,6 +230,7 @@
     title = {The Economic Activities of a Gilbertese Chief},
     booktitle = {Political Anthropology},
     address = {Chicago},
+    publisher={Aldine Publishing Company},
     pages = {155-172},
     year = {1966},
     lgcode = {Makin [bana1287]}
@@ -289,12 +300,13 @@
     lgcode = {Pukapukans [puka1242]}
 }
 
-@book{muller1917,
+@incollection{muller1917,
     author = {Muller, W.},
     editor = {G. Thilenius},
     title = {Yap},
     address = {Hamburg},
-    series = {Ergebnisse der Südsee-Expedition 1908-1910},
+    publisher={Friederichsen},
+    booktitle = {Ergebnisse der Südsee-Expedition 1908-1910},
     volume = {2, B, iii},
     pages = {1-380},
     year = {1917},
@@ -314,12 +326,15 @@
     lgcode = {Palauans [pala1344], Yapese [yape1248]}
 }
 
-@book{salesius1906,
-    author = {Salesius.},
-    title = {Die Karolineninsel Jap},
+
+
+
+@misc{salesius1906,
+    author = {Salesius},
+    title = {Die Karolinen-Insel Yap. Fin Beitrag zur Kentnis von land und Leuten in unseren deutschen Südsee-Kolonien [English trans by HRAF: The Caroline Island of Yap. A contribution towards an understanding
+our German South Sea colonies]},
     address = {Berlin},
-    year = {1906},
-    key = {Salesius (1906)},
+    year = {1907},
     lgcode = {Yapese [yape1248]}
 }
 
@@ -462,7 +477,7 @@ publisher={University of Hawai'i Press},
 @book{capell1958culture,
   title={The culture and language of Futuna and Aniwa, New Hebrides},
   author={Capell, Arthur},
-  published={University of Sydney},
+  publisher={University of Sydney},
   address={Sydney, Australia},
   year={1958}
 }
@@ -471,7 +486,7 @@ publisher={University of Hawai'i Press},
   title={Nukuoro kinship},
   author={Carroll, Vern},
   year={1966},
-  publisher={University of Chicago, Department of Anthropology, June}
+  school={University of Chicago, Department of Anthropology}
 }
 
 @incollection{carruci1991marshall,
@@ -613,9 +628,9 @@ publisher={University of Hawai'i Press},
   year={1991}
 }
 
-@book{carroll1975pacific,
+@incollection{carroll1975pacific,
 title={Demographic concepts and techniques for the study of small populations},
- editor={Carroll, Vern},
+    editor={Carroll, Vern},
   booktitle={Pacific atoll populations},
   author={Carroll, Vern},
   year={1975},
@@ -645,7 +660,7 @@ title={Demographic concepts and techniques for the study of small populations},
   author={Cummins, HG},
  booktitle={Friendly islands: A history of Tonga},
  editor={Rutherford, N},
- published={John Sands Ltd},
+ publisher={John Sands Ltd},
  address={Melbourne, Australia},
   pages={63--89},
   year={1977}
@@ -807,7 +822,7 @@ title={Demographic concepts and techniques for the study of small populations},
   author={Haun, Alan Edward},
   year={1984},
   address={Eugene, OR},
-  publisher={University of Oregon}
+  school={University of Oregon}
 }
 
 
@@ -862,11 +877,12 @@ title={Demographic concepts and techniques for the study of small populations},
   publisher={University of Chicago Press}
 }
 
-@article{kirch2002te,
+@misc{kirch2002te,
   title={Te Kai Paka-Anuta: food in a Polynesian outlier society},
   author={Kirch, Patrick V},
   journal={Journal de la Soci{\'e}t{\'e} des Oc{\'e}anistes},
   number={114-115},
+doi={https://doi.org/10.4000/jso.1404},
   pages={71--89},
   year={2002},
   publisher={Soci{\'e}t{\'e} des oc{\'e}anistes}
@@ -891,11 +907,11 @@ title={Demographic concepts and techniques for the study of small populations},
   publisher={Taylor \& Francis}
 }
 
-@article{lambert1975makin,
+@incollection{lambert1975makin,
+  booktitle={Pacific atoll populations},
   title={Makin and the outside world},
   author={Lambert, Bernd},
-  journal={Pacific atoll populations},
-  number={3},
+    editor={Carroll, Vern},
   pages={212--285},
   year={1975},
   publisher={University Press of Hawaii}
